tests/algorithms/x/Java/graphs/lanczos_eigenvectors.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden438_lanczos_eigenvectors1111274566/001/Main.java:359: error: incompatible types: double[] cannot be converted to Object[]
            s_3 = s_3 + _p(_geto(arr, i_13));
                                 ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
